Add algorithm choose page

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Network Graph</title>
 </head>
 <body>
-    <h1>Louvain and PageRank</h1>
+    <h1>Centrality and Community detection</h1>
     <!-- 显示图像 -->
     <img src="data:image/png;base64,{{ plot_url }}">
     <br>
