--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,7 +4,7 @@
     <title>Upload CSV File</title>
 </head>
 <body>
-    <h1>Upload CSV for Network Graph</h1>
+    <h1>Upload csv or xlsx file</h1>
     <form action="" method=post enctype=multipart/form-data>
         <input type=file name=file>
         <input type=submit value="Upload">
