--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -6,17 +6,45 @@
 <body>
     <h1>File uploaded successfully!</h1>
     <h2>Click the button below to choose the algorithm</h2>
-    <!-- 添加JavaScript代码来处理点击事件和显示消息 -->
     <script type="text/javascript">
-        function handleAnalyze() {
-            var analyzeButton = document.getElementById('analyzeButton');
-            analyzeButton.value = 'Please wait...';
-            analyzeButton.disabled = true;
+        function disableButtonsAndShowWaitMessage() {
+            var buttons = document.querySelectorAll('input[type="button"]');
+            for (var i = 0; i < buttons.length; i++) {
+                buttons[i].value = 'Please wait...';
+                buttons[i].disabled = true;
+            }
+        }
+
+        function handleFullAnalysis() {
+            disableButtonsAndShowWaitMessage();
             window.location.href = "{{ url_for('network_graph', filename=filename) }}";
         }
+
+        function promptTopNCommunities() {
+            disableButtonsAndShowWaitMessage();
+            var topN = prompt("Please enter the number of top communities you want to analyze:", "10");
+            if (topN != null) {
+                document.getElementById('topN').value = topN; // Set the value in the hidden form
+                document.getElementById('topNForm').submit(); // Submit the form
+            } else {
+                // If user cancels the prompt, re-enable the buttons
+                var buttons = document.querySelectorAll('input[type="button"]');
+                for (var i = 0; i < buttons.length; i++) {
+                    buttons[i].value = i === 0 ? "Full Network Analysis" : "Top N Communities Analysis";
+                    buttons[i].disabled = false;
+                }
+            }
+        }
     </script>
-    <form action="">
-        <input type="button" id="analyzeButton" value="Centrality and Community detection" onclick="handleAnalyze()">
+    <!-- 全网络分析按钮 -->
+    <input type="button" id="fullAnalysisButton" value="Full Network Analysis" onclick="handleFullAnalysis()">
+
+    <!-- 提示输入Top N社区数量的按钮 -->
+    <input type="button" id="topCommunitiesButton" value="Top N Communities Analysis" onclick="promptTopNCommunities()">
+
+    <!-- 隐藏的表单用于提交用户输入的Top N值 -->
+    <form id="topNForm" action="{{ url_for('show_top_communities', filename=filename) }}" method="post" style="display: none;">
+        <input type="hidden" id="topN" name="topN">
     </form>
 </body>
 </html>
