--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Network Graph</title>
+    <!-- 引入 Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <h1>Centrality and Community detection</h1>
@@ -14,9 +16,30 @@
       {% endif %}
     {% endwith %}
 
+    <!-- Operation Guide Modal -->
+    <div class="modal fade" id="operationGuideModal" tabindex="-1" role="dialog" aria-labelledby="operationGuideModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="operationGuideModalLabel">Operation Guide</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    If you want to edit nodes or edges (such as delete, add), please enable "Manipulation".<br>
+                    If you want to adjust physical effects, please enable "Physics".
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- 显示交互式图像 -->
     {% if graph_html_path %}
-        <iframe src="{{ url_for('static', filename=graph_html_path.split('/')[-1]) }}" height="800" width="100%"></iframe>
+        <iframe src="{{ url_for('static', filename=graph_html_path.split('/')[-1]) }}" height="1000" width="100%"></iframe>
     {% else %}
         <p>No graph to display.</p>
     {% endif %}
@@ -26,14 +49,6 @@
     <!-- Print filename for debugging -->
     <p>Current Filename: {{ filename }}</p>
 
-    <!-- 添加表单以允许用户输入要删除的节点ID -->
-    <h2>Delete a node and its edges</h2>
-    <form action="{{ url_for('delete_node', filename=filename) }}" method="post" onsubmit="disableButtonsAndShowWaitMessage()">
-        <label for="nodeId">Enter the ID of the node to delete:</label>
-        <input type="text" id="nodeId" name="nodeId" required>
-        <input type="submit" value="Delete Node">
-    </form>
-
     <script type="text/javascript">
         function disableButtonsAndShowWaitMessage() {
             var submitButtons = document.querySelectorAll('input[type="submit"], input[type="button"]');
@@ -42,6 +57,14 @@
                 submitButtons[i].disabled = true;
             }
         }
+    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // 页面加载完毕后自动显示模态框
+            $('#operationGuideModal').modal('show');
+        });
     </script>
 </body>
 </html>
