--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Upload CSV File</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <h1>Upload csv or xlsx file</h1>
