--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Analyze Network</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <h1>File uploaded successfully!</h1>
