The edge's width aligns with weight now

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,10 @@
                 <div class="modal-body">
                     If you want to edit nodes or edges (such as delete, add), please enable "Manipulation".<br>
                     If you want to adjust physical effects, please enable "Physics".
+                    Have fun! :)
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Got it!</button>
                 </div>
             </div>
         </div>
