--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,22 @@
 
     <!-- 显示交互式图像 -->
     {% if graph_html_path %}
-        <iframe src="{{ url_for('static', filename=graph_html_path.split('/')[-1]) }}" height="1000" width="100%"></iframe>
+        <iframe src="{{ url_for('static', filename=graph_html_path.split('/')[-1]) }}" height="835" width="100%"></iframe>
     {% else %}
         <p>No graph to display.</p>
     {% endif %}
+    <br>
+    <!-- 添加表单以允许用户输入两个节点 -->
+    <h2>Find Shortest Path</h2>
+    <form id="shortestPathForm">
+        <label for="nodeStart">Start Node:</label>
+        <input type="text" id="nodeStart" name="nodeStart" required>
+        <label for="nodeEnd">End Node:</label>
+        <input type="text" id="nodeEnd" name="nodeEnd" required>
+        <input type="button" value="Find Path" onclick="findShortestPath()">
+    </form>
+
+    <div id="pathResult" style="width: 30%; height: 300px;"></div>
     <br>
     <a href="{{ url_for('upload_file') }}">Upload another file</a>
 
@@ -59,13 +71,36 @@
             }
         }
     </script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
             // 页面加载完毕后自动显示模态框
             $('#operationGuideModal').modal('show');
         });
+    </script>
+    <script>
+    function findShortestPath() {
+        var nodeStart = document.getElementById('nodeStart').value;
+        var nodeEnd = document.getElementById('nodeEnd').value;
+        var filename = "{{ filename }}"; // 从 Flask 模板变量获取文件名
+
+        // 发送 AJAX 请求到 Flask 后端
+        $.ajax({
+            url: '/find_shortest_path',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({ 'filename': filename, 'nodeStart': nodeStart, 'nodeEnd': nodeEnd }),
+            dataType: 'json',
+            success: function(response) {
+                // 将新生成的 Pyvis 图嵌入到页面中
+                document.getElementById('pathResult').innerHTML = '<iframe src="' + response.graph_html_path + '" height="500" width="100%"></iframe>';
+            },
+            error: function(error) {
+                console.log(error);
+            }
+        });
+    }
     </script>
 </body>
 </html>
