Add code comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,8 +54,9 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        If you want to edit (delete or add) nodes or edges, please enable "Manipulation".<br>
-                        If you want to adjust physical effects, please enable "Physics".<br>
+                        1. If you want to edit (delete or add) nodes or edges, please enable "Manipulation".<br>
+                        2. If you want to adjust physical effects, please enable "Physics".<br>
+                        3. Loading might need some time for large datasets.<br>
                         Have fun! :)
                     </div>
                 </div>
