Add incorrect format files handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,9 @@
                         3. Loading might need some time for large datasets.<br>
                         Have fun! :)
                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Got it!</button>
+                    </div>
                 </div>
             </div>
         </div>
