remove flash messages on result page

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,13 +35,13 @@
         <h1>Centrality and Community Detection</h1>
 
         <!-- Display flash messages -->
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert-message">{{ message }}</div>
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
+{#        {% with messages = get_flashed_messages() %}#}
+{#          {% if messages %}#}
+{#            {% for message in messages %}#}
+{#              <div class="alert-message">{{ message }}</div>#}
+{#            {% endfor %}#}
+{#          {% endif %}#}
+{#        {% endwith %}#}
 
         <!-- Modal for operation guide -->
         <div class="modal fade" id="operationGuideModal" tabindex="-1" aria-labelledby="operationGuideModalLabel" aria-hidden="true">
