fix incorrect redire-url

--- a/templates/graphSAGE.html
+++ b/templates/graphSAGE.html
@@ -91,7 +91,7 @@
       <button
         id="goVisualizationDataUpload"
         class="btn btn-info mt-3"
-        onclick="window.location.href='/analyze'"
+        onclick="window.location.href='/upload_to_vis'"
       >
         Go to Analyze
       </button>
