Add styles for dendrogram

--- a/templates/Dendrogram.html
+++ b/templates/Dendrogram.html
@@ -24,6 +24,8 @@
                 <li>The height of the branching point indicates the distance (dissimilarity) between merging clusters.</li>
                 <li>Clusters that merge at lower heights are more similar to each other than those that merge at higher heights.</li>
                 <li>Navigate through the tree to see the hierarchical clustering and explore relationships between data points.</li>
+                <li>A label "Cluster of X" indicates an internal node that represents a cluster with X individuals. These clusters can be expanded to show how individuals or sub-clusters are grouped within.</li>
+                <li>Leaf nodes labeled with names are individual observations and cannot be expanded as they represent the most granular level of data.</li>
             </ul>
         </div>
 
