--- a/templates/dataProcess.html
+++ b/templates/dataProcess.html
@@ -76,6 +76,13 @@
       >
         Go to Analyze
       </button>
+      <button
+        id="goHomePage"
+        class="btn btn-info mt-3"
+        onclick="window.location.href='/'"
+      >
+        Go Back to Upload
+      </button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
