--- a/templates/Home.html
+++ b/templates/Home.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <style>
       body {
         padding-top: 20px;
@@ -24,19 +25,20 @@
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
-      h1,
-      h2,
-      h3 {
+      h1, h2, h3 {
         font-family: "Roboto", sans-serif;
         color: #007bff;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
         letter-spacing: 1.5px;
         word-spacing: 3px;
         text-align: center;
       }
-      .form-control,
-      .btn {
+      .form-control, .btn, .form-control-file {
         margin-top: 10px;
+      }
+      .required-icon {
+        color: red;
+        margin-left: 5px;
       }
       .legend {
         margin-top: 20px;
@@ -45,21 +47,27 @@
         border-radius: 5px;
         color: #495057;
       }
+      .disabled-input {
+        pointer-events: none;
+        opacity: 0.5;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Document Upload</h1>
-      <form id="fileUploadForm" action="/user_upload" method="post" enctype="multipart/form-data" class="mt-4">
+      <h1>Welcome to GraphSAGE</h1>
+        <form id="fileUploadForm" action="/user_upload" method="post" enctype="multipart/form-data" class="mt-4">
+        <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <div class="form-group">
           <input
             type="file"
             class="form-control-file"
             id="employeeFile"
             name="employeeFile"
+            onchange="disableInputField('employeeFile')"
             required
           />
-          <label for="employeeFile">Employee Document (Required)</label>
+          <label for="employeeFile">Employee Document <i class="fas fa-asterisk required-icon"></i></label>
         </div>
         <div class="form-group">
           <input
@@ -67,33 +75,41 @@
             class="form-control-file"
             id="relationshipFile"
             name="relationshipFile"
+            onchange="disableInputField('relationshipFile')"
           />
-          <label for="relationshipFile">Relationship File (Optional)</label>
+          <label for="relationshipFile">Relationship File </label>
         </div>
+        </div>
+
+        <div style="display: flex; justify-content: space-around; align-items: center;">
         <form id="fileUploadForm" action="/user_upload" method="post" enctype="multipart/form-data" class="mt-4">
-          <button type="submit" class="btn btn-primary">Confirm Upload</button>
+          <button type="submit" class="btn btn-primary" >Confirm Upload</button>
       </form>
         </button>
         <button type="button" class="btn btn-danger" onclick="cancelUpload()">
           Cancel Upload
         </button>
       </form>
-
       <button
         id="goVisualizationDataUpload"
-        class="btn btn-info mt-3"
+        class="btn btn-info"
         onclick="window.location.href='/upload_to_vis'"
       >
         Go to Analyze
       </button>
     </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-      // Implement the JavaScript functions here as per your functionality requirements
+      function disableInputField(inputField) {
+        document.getElementById(inputField).classList.add('disabled-input');
+      }
       function cancelUpload() {
-        document.getElementById("fileUploadForm").reset();
+          document.getElementById('fileUploadForm').reset();
+          document.getElementById('employeeFile').classList.remove('disabled-input');
+          document.getElementById('relationshipFile').classList.remove('disabled-input');
       }
     </script>
   </body>
